--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -8,7 +8,7 @@
 */
 
 html {
-  background-color: #fff;
+  background-color: #8d1f1f;
   font-size: 16px;
   min-width: 300px;
   overflow-x: hidden;
@@ -30,7 +30,7 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(128, 12, 12);
 }
 
 
@@ -39,14 +39,14 @@ a {
   text-decoration: none;
 }
 
-h2 {
+h2,h3 {
   margin:0;
   padding:0;
   padding-bottom:1.5rem;
 }
 
 form {
-  accent-color: hsla(120, 100%, 50%, 0.482);
+  accent-color: hsla(83, 95%, 46%, 0.482);
 }
 
 /*
@@ -92,8 +92,8 @@ form {
   /* this will push other blocks out of the way */
 
   /* colors */
-  background-color: #ffe08a;
-  color: #4a4a4a;
+  background-color: #0036ca;
+  color: #0ff31a;
 
   /* shapes */
   border-radius: 6px;
@@ -103,7 +103,7 @@ form {
 
 
   /* box-shadows are fancy */
-  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  box-shadow: 0 0.5em 1em -0.125em rgba(129, 46, 46, 0.63), 0 0 0 1px rgb(10 10 10 / 2%);
 }
 
 
@@ -117,7 +117,7 @@ form {
 */
 
 .box {
-  background-color: rgba(239, 239, 239, 0.40);
+  background-color: rgba(7, 3, 3, 0.808);
   border: 2px dashed;
   border-radius: 4px;
 
@@ -128,18 +128,21 @@ form {
 }
 
 .left_section {
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: rgba(202, 17, 63, 0.932);
   flex: 0 1 auto;
   margin: 1rem;
   padding: 1.5rem;
 }
 
 .right_section {
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: rgba(7, 230, 37, 0.897);
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
   max-width: 450px;
+  justify-content: center;
+  display: flex;
+  flex-flow: column;
 }
 
 /*
@@ -154,10 +157,16 @@ form {
   background-color: rgba(0, 139, 139, 0.8);
   font-size: 1.2rem;
   font-weight: 600;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
 }
 
 .footer a {
-  color: rgba(255, 224, 138, 1);
+  color: rgb(19, 208, 233);
   text-decoration: underline;
 }
 
@@ -168,14 +177,14 @@ form {
 */
 .footer a:hover {
   /* Hue, saturation, luminosity, alpha */
-  background-color: hsla(0, 0%, 90%, 0.15);
+  background-color: hsla(309, 88%, 16%, 0.15);
   /* red, green, blue, alpha */
-  color: rgb(246, 169, 93);
+  color: rgb(15, 231, 44);
   text-decoration: none;
 }
 
 .subtitle {
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(75, 17, 17, 0.932);
   margin: 0px;
   margin-bottom: 5px;
 }
@@ -252,7 +261,7 @@ div.carousel {
   height: 45px;
   padding: 10px;
   line-height: 0; /* This centers a button's text! */
-  border: 2px solid rgb(99,99,99); /* shorthand for how to do a border */
+  border: 2px solid rgba(26, 52, 138, 0.89); /* shorthand for how to do a border */
 }
 
 .prev:focus,
@@ -300,6 +309,9 @@ form label {
     /* Rules in here will only apply when a screen is the correct size */
     /* check it out by using your developer tools to shrink your screen-size */
     .container {
-      background-color: rgba(204, 8, 162, 0.65);
+      background-color: rgba(26, 1, 20, 0.801);
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 }
