--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -27,22 +27,23 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
+  font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
+    ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
   background-color: rgb(128, 12, 12);
 }
-
 
 a {
   display: inline-block;
   text-decoration: none;
 }
 
-h2,h3 {
-  margin:0;
-  padding:0;
-  padding-bottom:1.5rem;
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 1.5rem;
 }
 
 form {
@@ -55,7 +56,6 @@ form {
   - like this: <div class="wrapper">
   - note that the period vanishes there!
 */
-
 
 .wrapper {
   min-height: 100vh;
@@ -70,7 +70,7 @@ form {
   display: flex;
   justify-content: space-evenly;
   align-items: start;
-  flex:1;
+  flex: 1;
 }
 
 .header {
@@ -79,7 +79,6 @@ form {
   padding-right: 1rem;
   padding-bottom: 1.5rem;
 }
-
 
 /*
   This rule implies that the H1 tag lives within another HTML tag
@@ -99,13 +98,12 @@ form {
   border-radius: 6px;
   font-size: 1.5rem;
   padding: 1.25rem;
-  margin:0; /* removing the margin on h1 tags means the header pins to the top if we move */
-
+  margin: 0; /* removing the margin on h1 tags means the header pins to the top if we move */
 
   /* box-shadows are fancy */
-  box-shadow: 0 0.5em 1em -0.125em rgba(129, 46, 46, 0.63), 0 0 0 1px rgb(10 10 10 / 2%);
+  box-shadow: 0 0.5em 1em -0.125em rgba(129, 46, 46, 0.63),
+    0 0 0 1px rgb(10 10 10 / 2%);
 }
-
 
 /*
   Rules can be combined on a block to apply the 'cascade' in order
@@ -122,7 +120,7 @@ form {
   border-radius: 4px;
 
   width: fit-content;
-  height:fit-content;
+  height: fit-content;
   padding: 1.5rem;
   margin: 0 auto;
 }
@@ -189,7 +187,6 @@ form {
   margin-bottom: 5px;
 }
 
-
 /* Deploy this with images as direct "children" and the images should pop into shape */
 .grid {
   display: flex;
@@ -204,7 +201,6 @@ form {
   width: 150px;
   height: 150px;
 }
-
 
 /* Carousel */
 div.carousel {
@@ -248,7 +244,7 @@ div.carousel {
     - now make sure that images are _always_ square
     - ... there's a reason crop tools are popular in image editors
    */
-  width: 150px; 
+  width: 150px;
 }
 
 .prev,
@@ -280,22 +276,22 @@ Form Styles
 */
 
 form input {
-    /* This is a hack to make sure our boxes line up with one another nicely */
-    width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-    width: fill-available;
+  /* This is a hack to make sure our boxes line up with one another nicely */
+  width: 100%;
+  width: -moz-available; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  width: fill-available;
 
-    /* here we are setting white space correctly */
-    margin-bottom: 1rem;
-    height: 2rem;
-    border-radius: 4px;
-  }
+  /* here we are setting white space correctly */
+  margin-bottom: 1rem;
+  height: 2rem;
+  border-radius: 4px;
+}
 
 form label {
   width: 100%;
-  width: -moz-available;          /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  width: -moz-available; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
   width: fill-available;
   align-items: flex-start;
 
@@ -305,13 +301,13 @@ form label {
 
 /* How To Write A Media Query For Small Screens */
 
-@media only screen and (max-width: 736px){
-    /* Rules in here will only apply when a screen is the correct size */
-    /* check it out by using your developer tools to shrink your screen-size */
-    .container {
-      background-color: rgba(26, 1, 20, 0.801);
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+@media only screen and (max-width: 736px) {
+  /* Rules in here will only apply when a screen is the correct size */
+  /* check it out by using your developer tools to shrink your screen-size */
+  .container {
+    background-color: rgba(26, 1, 20, 0.801);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
