--- a/client/lab_8/style.css
+++ b/client/lab_8/style.css
@@ -113,6 +113,11 @@
     Rules may combine in unexpected ways - remember that the LAST thing written in this file will have "priority"
     And will be what displays in your client
   */
+  #map {
+    width: 400px;
+    height: 360px;
+    margin-bottom: 1rem;
+  }
   
   .box {
     background-color: rgba(7, 3, 3, 0.808);
